--- a/shard.yml
+++ b/shard.yml
@@ -1,12 +1,12 @@
-name: tsm-health-check
+name: health-checker
 version: 0.1.0
 
 authors:
   - Martin Mareš <mares@datalite.cz>
 
 targets:
-  tsm-health-check:
-    main: src/tsm-health-check.cr
+  health-checker:
+    main: src/health-checker.cr
 
 dependencies:
   tallboy:
@@ -17,6 +17,8 @@ dependencies:
     github: mamantoha/crest
   markd:
     github: icyleaf/markd
+  timeout:
+    github: hugoabonizio/timeout.cr
 
 crystal: 1.3.2
 
