--- a/conf/dev.yml
+++ b/conf/dev.yml
@@ -3,10 +3,29 @@
     request:
       timeout: 5
       status_code: 200
-      type: json
+      content_type: application/json
       rules:
-        - path: ".status"
-          value: "UP"
+        - type: json
+          path: ".status"
+          includes: "UP"
+    response:
+      status_code: 200
+      content_type: application/json
+      body: '{ "status": "UP", "description": "The service is up and running." }'
+  down:
+    response:
+      status_code: 503
+      content_type: application/json
+      body: '{ "status": "DOWN", "description": "The service is unavailable!" }'
+.default_text_check: &default_text_check
+  up:
+    request:
+      timeout: 5
+      status_code: 200
+      content_type: text/plain
+      rules:
+        - type: text
+          includes: "OK"
     response:
       status_code: 200
       content_type: application/json
@@ -17,27 +36,94 @@
       content_type: application/json
       body: '{ "status": "DOWN", "description": "The service is unavailable!" }'
 html:
-  title: Healt checker - <strong>dev mode</strong>
+  title: Healt checker
+  header: Healt checker - <strong>dev mode</strong>
   footer: Developed by Martin Mareš, with <a href="https://crystal-lang.org">Crystal lang</a>.
 checks:
-- name: test-timeout-1s
+- name: test-timeout-1s-200-ok
   endpoint: http://httpstat.us/200?sleep=1000
-  <<: *default_json_check
+  up:
+    request:
+      timeout: 5
+      status_code: 200
+      content_type: text/plain
+      rules:
+        - type: text
+          includes: "200"
+        - type: text
+          includes: "OK"
+        - type: text
+          includes: "200 OK"
+    response:
+      status_code: 200
+      content_type: application/json
+      body: '{ "status": "UP", "description": "The service is up and running (check 200=ok)." }'
+  down:
+    response:
+      status_code: 503
+      content_type: application/json
+      body: '{ "status": "DOWN", "description": "The service is unavailable!" }'
+- name: test-timeout-1s-200-not-ok
+  endpoint: http://httpstat.us/200?sleep=1000
+  up:
+    request:
+      timeout: 5
+      status_code: 200
+      content_type: text/plain
+      rules:
+        - type: text
+          includes: "200"
+        - type: text
+          includes: "OK"
+        - type: text
+          includes: "200 NOT OK"
+    response:
+      status_code: 200
+      content_type: application/json
+      body: '{ "status": "UP", "description": "The service is up and running (check 200=ok)." }'
+  down:
+    response:
+      status_code: 503
+      content_type: application/json
+      body: '{ "status": "DOWN", "description": "The service is unavailable!" }'
+- name: test-timeout-1s-201-ok
+  endpoint: http://httpstat.us/201?sleep=1000
+  up:
+    request:
+      timeout: 5
+      status_code: 201
+      content_type: text/plain
+      rules:
+        - type: text
+          includes: "Created"
+        - type: text
+          includes: "201"
+        - type: text
+          includes: "201 Created"
+    response:
+      status_code: 200
+      content_type: application/json
+      body: '{ "status": "UP", "description": "The service is up and running (check 201=ok)." }'
+  down:
+    response:
+      status_code: 503
+      content_type: application/json
+      body: '{ "status": "DOWN", "description": "The service is unavailable!" }'
 - name: test-timeout-2s
   endpoint: http://httpstat.us/200?sleep=2000
-  <<: *default_json_check
+  <<: *default_text_check
 - name: test-timeout-3s
   endpoint: http://httpstat.us/200?sleep=3000
-  <<: *default_json_check
+  <<: *default_text_check
 - name: test-timeout-4s
   endpoint: http://httpstat.us/200?sleep=4000
-  <<: *default_json_check
+  <<: *default_text_check
 - name: test-timeout-5s
   endpoint: http://httpstat.us/200?sleep=5000
-  <<: *default_json_check
+  <<: *default_text_check
 - name: test-timeout-10s
   endpoint: http://httpstat.us/200?sleep=10000
-  <<: *default_json_check
+  <<: *default_text_check
 - name: test-timeout-20s
   endpoint: http://httpstat.us/200?sleep=20000
-  <<: *default_json_check
+  <<: *default_text_check
