--- a/conf/test.yml
+++ b/conf/test.yml
@@ -3,10 +3,11 @@
     request:
       timeout: 5
       status_code: 200
-      type: json
+      content_type: application/json
       rules:
-        - path: ".status"
-          value: "UP"
+        - type: json
+          path: ".status"
+          includes: "UP"
     response:
       status_code: 200
       content_type: application/json
@@ -17,7 +18,8 @@
       content_type: application/json
       body: '{ "status": "DOWN", "description": "The service is unavailable!" }'
 html:
-  title: <strong>tSM</strong> - health checker
+  title: tSM - health checker
+  header: <strong>tSM</strong> - health checker
   footer: Created by <a href="https://www.datalite.cz">DataLite</a>, primarily for <a href="https://tsm.datalite.cz">tSM</a> app.
 checks:
 - name: tsm-address-management
